--- a/client/src/features/editor/components/LanguageSelector/LanguageSelector.scss
+++ b/client/src/features/editor/components/LanguageSelector/LanguageSelector.scss
@@ -1,4 +1,4 @@
-@use '../../../styles/variables' as *;
+@use '../../../../styles/variables' as *;
 
 .LanguageSelector {
   background: $background-color-alt;
