--- a/client/src/features/training/components/ChatInput/ChatInput.scss
+++ b/client/src/features/training/components/ChatInput/ChatInput.scss
@@ -1,8 +1,8 @@
-@use '../../../styles/variables' as *;
+@use '../../../../styles/variables' as *;
 
 .ChatInput {
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   gap: $spacing-sm;
   padding: $spacing-sm $spacing-md;
   border-top: 1px solid $grayMid;
