--- a/client/src/layouts/AppLayout/AppLayout.scss
+++ b/client/src/layouts/AppLayout/AppLayout.scss
@@ -60,6 +60,9 @@
   }
 
   &__brand {
+    display: flex;
+    align-items: center;
+    gap: $spacing-sm;
     font-family: $fontFamilySecondary;
     font-size: 1.25rem;
     font-weight: 700;
