--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -28,6 +28,10 @@ $radius-sm: 4px;
 $radius-md: 8px;
 $radius-lg: 12px;
 
+// Sidebar
+$sidebar-width-expanded: 240px;
+$sidebar-width-collapsed: 64px;
+
 // Breakpoints
 $breakpoint-mobile: 768px;
 
